# Rubick-Opengl

./: CMakeLists.txt  README.md  _GENERATE_VS2019_x64.bat  clean.sh  compile.sh
dep/include/glad/glad/: glad.c  glad.h
dep/lib/freeglut/Debug/: freeglut_staticd.lib  freeglutd.lib
dep/lib/freeglut/Release/: freeglut.lib  freeglut_static.lib
dep/lib/freeimage/Debug/: FreeImaged.lib
dep/lib/freeimage/Release/: FreeImage.lib
dep/lib/glad/Debug/: glad.lib
dep/lib/glad/Release/: glad.lib
dep/lib/glew/Debug/: glew32d.lib  glew32sd.lib
dep/lib/glew/Release/: glew32.lib  glew32s.lib
dep/lib/glfw/Debug/: glfw3.lib
dep/lib/glfw/Release/: glfw3.lib
dep/lib/glm/Debug/: glm_static.lib
dep/lib/glm/Release/: glm_static.lib
src/: CMakeLists.txt
src/Rubick/: CMakeLists.txt  Camera.hpp  Cubito.hpp  Cubo.hpp  GameController.hpp  Rendered.hpp  Resources.hpp  Setting.hpp  Shader.h  Texture.hpp  Tutorial_01.rar  World.hpp  main.cpp
src/Rubick/solver/: Corners.cpp  Cross.cpp  Cube.cpp  Cube.hpp  Rubik.hpp
src/Rubick/src/shaders/: cubito.fs  cubito.vs  cubito_mirrow.fs  cubito_transparent.fs  cubito_transparent.vs  floor.fs  grass.fs
src/hw0/: CMakeLists.txt  geometry3.h  mytest3.cpp  shaders.cpp
src/hw0/shaders/: light.frag.glsl
